future of posts updated

--- a/futurePosts/index.html
+++ b/futurePosts/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>  | 222dof </title>
+		<title> Future Posts | 222dof </title>
 		<link href="/222dof/css/foundation.css" rel="stylesheet">
 		
 		
@@ -30,6 +30,11 @@
 			
 			<div id="content">
 			
+<h1>Future Posts</h1>
+<ul>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API" target="_blank">Comprehensive guide to Intersection Observer API</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/AbortController" target="_blank">Comprehensive guide to AbortController</a></li>
+</ul>
 
 			</div>
 	
