--- a/goals/index.html
+++ b/goals/index.html
@@ -12,8 +12,9 @@
 		<div id="container">
 			<nav id="main-navigation">
 				<div id="header-logo">
-					<h1><a href="/222dof/">222 days of code</a></h1>
-					<small>posts everyday (until August 1st)</small>
+					<h1><small id="counter-day"></small>
+					<a href="/222dof/">222 days of code</a></h1>
+					<small>posts everyday until August 1st</small>
 				</div>
 				
 				<div id="main-navigation-menu">
@@ -21,7 +22,6 @@
 					<ul id="main-navigation-links">
 						<li><a href="/222dof/progress/">progress</a></li>
 						<li><a href="/222dof/goals/">goals</a></li>
-						<li><a href="/222dof/futurePosts/">future posts</a></li>
 						<li><a href="/222dof/notes/">notes</a></li>
 						<li><a href="/222dof/projects/">projects</a></li>
 					</ul>
@@ -30,13 +30,37 @@
 			
 			<div id="content">
 			
+<h1>Goals</h1>
+<ul>
+    <label for="">Finish all projects</label>
+    <ul>
+        <li><a href="https://roadmap.sh/projects?g=frontend" target="_blank">Frontend</a></li>
+        <li><a href="https://roadmap.sh/projects?g=backend" target="_blank">Backend</a></li>
+    </ul>
+    <li>Contribute in a meaningful way to 10 open source projects</li>
+    <label for="">Certifications</label>
+    <ul>
+        <li>Freecodecamp
+            <ul>
+                <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">Responsive Web Design</a></li>
+                <li><a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures-v8/" target="_blank">JavaScript Algorithms and Data Structures</a></li>
+                <li><a href="https://www.freecodecamp.org/learn/front-end-development-libraries/" target="_blank">Front End Development Libraries</a></li>
+                <li><a href="https://www.freecodecamp.org/learn/relational-database/" target="_blank">Relational Database</a></li>
+            l>
+        </ul></li>
+        <li></li>
+        <li><a href="https://www.coursera.org/professional-certificates/google-ux-design" target="_blank">Google UX Design Professional</a></li>
+        <li><a href="https://www.coursera.org/professional-certificates/meta-front-end-developer" target="_blank">Meta front end developer</a></li>
+        <li><a href="https://cs50.harvard.edu/x/2024/" target="_blank">CS50x</a></li>
+    </ul>
+</ul>
+
 
 			</div>
 	
 
 			<footer id="main-footer">
 				<div id="main-footer-about">
-					<small id="counter"><span id="counter-day">0</span> / <span id="counter-goal">222</span></small>
 					<p>222 days of blog posts on my journey to becoming a web developer. I hope this can serve as a resource
 					for aspiring web developers with useful posts, notes, and links to guide them on their journey.</p>
 				</div>
@@ -51,7 +75,7 @@
 			const counterDay = document.querySelector("#counter-day");
 			// Date() - Date() = milliseconds ... 8640000 = milliseconds in a day
 			const dayDifference = Math.floor((new Date() - new Date(2024, 11, 22)) / 86400000);
-			counterDay.innerText = dayDifference;
+			counterDay.innerText = `${dayDifference} /`;
 
 
 			const mainNavigationLinks = document.querySelectorAll("#main-navigation-links a");
