--- a/goals/index.html
+++ b/goals/index.html
@@ -14,7 +14,7 @@
 				<div id="header-logo">
 					<h1><small id="counter-day"></small>
 					<a href="/222dof/">222 days of code</a></h1>
-					<small>posts everyday until August 1st</small>
+					<small>coding everyday until August 1st</small>
 				</div>
 				
 				<div id="main-navigation-menu">
@@ -53,6 +53,7 @@
         <li><a href="https://www.coursera.org/professional-certificates/meta-front-end-developer" target="_blank">Meta front end developer</a></li>
         <li><a href="https://cs50.harvard.edu/x/2024/" target="_blank">CS50x</a></li>
     </ul>
+    <li>Finish grokking algorithms </li>
 </ul>
 
 
