--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,7 @@
 				<div id="header-logo">
 					<h1><small id="counter-day"></small>
 					<a href="/222dof/">222 days of code</a></h1>
-					<small>posts everyday until August 1st</small>
+					<small>coding everyday until August 1st</small>
 				</div>
 				
 				<div id="main-navigation-menu">
