--- a/notes/index.html
+++ b/notes/index.html
@@ -175,7 +175,7 @@
 					<img id="hamburger" src="/222dof/vectors/hamburger.svg" onclick="hamburgerClick(this)" data-mode="0" alt="hamburger icon">
 					<ul id="main-navigation-links">
 						<li><a href="/222dof/progress/">progress</a></li>
-						<li><a href="/222dof/goals/">goals</a></li>
+						<!-- <li><a href="/goals/">goals</a></li> -->
 						<li><a href="/222dof/notes/">notes</a></li>
 						<li><a href="/222dof/projects/">projects</a></li>
 					</ul>
