revamp of projects layout

--- a/notes/index.html
+++ b/notes/index.html
@@ -12,7 +12,7 @@
         margin: 0;
     }
 
-    li {
+    #notes-navigation li {
         margin: 0 !important;
         list-style-type: none;
         display: block;
