--- a/projects/index.html
+++ b/projects/index.html
@@ -32,82 +32,106 @@
 			<div id="content">
 			
 
-<h2>In Development</h2>
 <div class="projects-container">
+    <div class="col">
 
-
-    <div class="project">
-        <a href="https://github.com/constanthing/cymages.git" target="_blank">
-            <img class="project-image" src="/222dof/vectors/cymages-logo.svg" alt="">
-        </a>
-        <div class="project-body">
-            <div class="project-metadata">
-                <div>
-                    <a href="#">GitHub Repo</a>
-                    <p> | </p>
-                    <a href="#">Live Site</a>
+        <div class="project">
+            <a href="https://github.com/constanthing/cymages.git" target="_blank">
+                <img class="project-image" src="/222dof/vectors/cymages-logo.svg" alt="">
+            </a>
+            <div class="project-body">
+                <div class="project-metadata">
+                    <div class="project-site">
+                        <a href="https://github.com/constanthing/cymages.git" target="_blank">GitHub Repo</a>
+                        <p> | </p>
+                        <a href="https://constanthing.github.io/cymages/" target="_blank">Live Site</a>
+                    </div>
                 </div>
+                <p>Image gallery, adjuster, and exporter for Cyberpunk 2077 images.</p>
             </div>
-            <p>Image gallery, adjuster, and exporter for Cyberpunk 2077 images.</p>
         </div>
-    </div>
-    <div class="project">
-        <a href="https://github.com/constanthing/222dof.git" target="_blank">
-            <img class="project-image" src="/222dof/vectors/222dof-logo.svg" alt="">
-        </a>
-        <div class="project-body">
-            <div class="project-metadata">
-            </div>
-            <p>Personal blog starting 12/22/2024 with daily posts about progress to learning web development.</p>
-        </div>
-    </div>
-    <div class="project">
-        <a href="https://github.com/constanthing/typing.git" target="_blank">
-            <img class="project-image" src="/222dof/vectors/tieping-logo.svg" alt="">
-        </a>
-        <div class="project-body">
-            <div class="project-metadata">
-            </div>
-            <p>Typing website like monkeytype/typeracer. Starter website after a long hiatus from programming to get me
-                motivated again.</p>
-        </div>
-    </div>
-</div>
 
-<h2>Future Websites</h2>
-<div class="projects-container">
-    <div class="project">
-        <div class="project-title">
-            <h3>Driving Instructor</h3>
+        <div class="project">
+            <div class="project-title">
+                <h3>Driving Instructor</h3>
+            </div>
+            <div class="project-body">
+                <p>Website that teaches people from different American states how to drive primarily based on different
+                    scenarios -- like a game. </p>
+            </div>
         </div>
-        <div class="project-body">
-            <p>Website that teaches people from different American states how to drive primarily based on different scenarios -- like a game.	</p>
-        </div>
-    </div>
-    <div class="project">
-        <div class="project-title">
-            <h3>whatodo</h3>
-        </div>
-        <div class="project-body">
-            <p>Personal city navigator that shows what to do in a city such as events, food, shopping, views, trails, parks, etc.	</p>
-        </div>
-    </div>
-    <div class="project">
-        <div class="project-title">
-            <h3>undertheskin</h3>
-        </div>
-        <div class="project-body">
-            <p>After learning the ins-and-outs of CSS I want to practice by creating a framework like tailwind, bootstrap, minimal, etc.	</p>
+
+        <div class="project">
+            <div class="project-title">
+                <h3>moud</h3>
+            </div>
+            <div class="project-body">
+                <p>[music, presentation, ] </p>
+            </div>
         </div>
     </div>
-    <div class="project">
-        <div class="project-title">
-            <h3>moud</h3>
+    <div class="col">
+        <div class="project">
+            <a href="https://github.com/constanthing/222dof.git" target="_blank">
+                <img class="project-image" src="/222dof/vectors/222dof-logo.svg" alt="">
+            </a>
+            <div class="project-body">
+                <div class="project-metadata">
+                    <div class="project-site">
+                        <a href="https://github.com/constanthing/222dof.git" target="_blank">GitHub Repo</a>
+                        <p> | </p>
+                        <a href="https://constanthing.github.io/222dof/" target="_blank">Live Site</a>
+                    </div>
+                </div>
+                <p>Personal blog starting 12/22/2024 with daily posts about progress to learning web development.</p>
+            </div>
         </div>
-        <div class="project-body">
-            <p>[music, presentation, ]	</p>
+
+        <div class="project">
+            <div class="project-title">
+                <h3>whatodo</h3>
+            </div>
+            <div class="project-body">
+                <p>Personal city navigator that shows what to do in a city such as events, food, shopping, views,
+                    trails,
+                    parks, etc. </p>
+            </div>
         </div>
     </div>
+    <div class="col">
+        <div class="project">
+            <a href="https://github.com/constanthing/typing.git" target="_blank">
+                <img class="project-image" src="/222dof/vectors/tieping-logo.svg" alt="">
+            </a>
+            <div class="project-body">
+                <div class="project-metadata">
+                    <div class="project-site">
+                        <a href="https://github.com/constanthing/typing.git" target="_blank">GitHub Repo</a>
+                        <p> | </p>
+                        <a href="#">Live Site</a>
+                    </div>
+                </div>
+                <p>Typing website like monkeytype/typeracer. Starter website after a long hiatus from programming to get
+                    me
+                    motivated again.</p>
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">
+                <h3>undertheskin</h3>
+            </div>
+            <div class="project-body">
+                <p>After learning the ins-and-outs of CSS I want to practice by creating a framework like tailwind,
+                    bootstrap, minimal, etc. </p>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
 </div>
 
 			</div>
