removed linear-gradient background... its too much.

--- a/progress/index.html
+++ b/progress/index.html
@@ -7,6 +7,9 @@
 		<link href="/222dof/css/foundation.css" rel="stylesheet">
 		
 <style>
+    html, body {
+        background: black;
+    }
     #heatmap {
         width: 100%;
         display: flex;
