--- a/projects/index.html
+++ b/projects/index.html
@@ -83,7 +83,7 @@
                         <a href="https://constanthing.github.io/222dof/" target="_blank">Live Site</a>
                     </div>
                 </div>
-                <p>Personal blog starting 12/22/2024 with daily posts about progress to learning web development.</p>
+                <p>Personal blog starting 12/22/2024 with posts about my progress to learning web development.</p>
             </div>
         </div>
 
@@ -139,7 +139,7 @@
 
 			<footer id="main-footer">
 				<div id="main-footer-about">
-					<p>222 days of blog posts on my journey to becoming a web developer. I hope this can serve as a resource
+					<p>A journey to becoming a web developer. I hope this can serve as a resource
 					for aspiring web developers with useful posts, notes, and links to guide them on their journey.</p>
 				</div>
 				
