--- a/projects/index.html
+++ b/projects/index.html
@@ -11,16 +11,16 @@
 	</head>
 	<body>
 		<div id="container">
-			<nav id="main-navigation">
+			<nav id="main-navigation" class="flex ai-c jc-sb">
 				<div id="header-logo">
 					<h1><small id="counter-day"></small>
 					<a href="/222dof/">222 days of code</a></h1>
 					<small>coding everyday until August 1st</small>
 				</div>
 				
-				<div id="main-navigation-menu">
+				<div id="main-navigation-menu" class="flex fd-c ai-e">
 					<img id="hamburger" src="/222dof/vectors/hamburger.svg" onclick="hamburgerClick(this)" data-mode="0" alt="hamburger icon">
-					<ul id="main-navigation-links">
+					<ul id="main-navigation-links" class="flex">
 						<li><a href="notes.html" class="clickable">thoughts</a></li>
 						<li><a href="/222dof/progress/" class="clickable">progress</a></li>
 						<!-- <li><a href="/goals/" class="clickable">goals</a></li> -->
@@ -33,16 +33,16 @@
 			<div id="content">
 			
 
-<div class="projects-container">
-    <div class="col">
+<div class="projects-container flex jc-sb fw-w">
+    <div class="col flex fd-c">
 
-        <div class="project">
+        <div class="project flex fd-c">
             <a href="https://github.com/constanthing/cymages.git" target="_blank">
                 <img class="project-image" src="/222dof/vectors/cymages-logo.svg" alt="">
             </a>
             <div class="project-body">
                 <div class="project-metadata">
-                    <div class="project-site">
+                    <div class="project-site flex jc-s">
                         <a href="https://github.com/constanthing/cymages.git" target="_blank">GitHub Repo</a>
                         <p> | </p>
                         <a href="https://constanthing.github.io/cymages/" target="_blank">Live Site</a>
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="project">
+        <div class="project flex fd-c">
             <div class="project-title">
                 <h3>Driving Instructor</h3>
             </div>
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="project">
+        <div class="project flex fd-c">
             <div class="project-title">
                 <h3>moud</h3>
             </div>
@@ -71,14 +71,14 @@
             </div>
         </div>
     </div>
-    <div class="col">
-        <div class="project">
+    <div class="col flex fd-c">
+        <div class="project flex fd-c">
             <a href="https://github.com/constanthing/222dof.git" target="_blank">
                 <img class="project-image" src="/222dof/vectors/222dof-logo.svg" alt="">
             </a>
             <div class="project-body">
                 <div class="project-metadata">
-                    <div class="project-site">
+                    <div class="project-site flex jc-s">
                         <a href="https://github.com/constanthing/222dof.git" target="_blank">GitHub Repo</a>
                         <p> | </p>
                         <a href="https://constanthing.github.io/222dof/" target="_blank">Live Site</a>
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div class="project">
+        <div class="project flex fd-c">
             <div class="project-title">
                 <h3>wayfnder</h3>
             </div>
@@ -99,14 +99,14 @@
             </div>
         </div>
     </div>
-    <div class="col">
-        <div class="project">
+    <div class="col flex fd-c">
+        <div class="project flex fd-c">
             <a href="https://github.com/constanthing/typing.git" target="_blank">
                 <img class="project-image" src="/222dof/vectors/tieping-logo.svg" alt="">
             </a>
             <div class="project-body">
                 <div class="project-metadata">
-                    <div class="project-site">
+                    <div class="project-site flex jc-s">
                         <a href="https://github.com/constanthing/typing.git" target="_blank">GitHub Repo</a>
                         <p> | </p>
                         <a href="#">Live Site</a>
@@ -118,7 +118,7 @@
             </div>
         </div>
 
-        <div class="project">
+        <div class="project flex fd-c">
             <div class="project-title">
                 <h3>undertheskin</h3>
             </div>
@@ -136,7 +136,7 @@
 			</div>
 	
 
-			<footer id="main-footer">
+			<footer id="main-footer" class="flex ai-c jc-sb">
 				<div id="main-footer-about">
 					<p>A journey to becoming a web developer. I hope this can serve as a resource
 					for aspiring web developers with useful posts, notes, and links to guide them on their journey.</p>
