added links to notes

--- a/notes/index.html
+++ b/notes/index.html
@@ -89,6 +89,7 @@
             <li><a href="https://www.theodinproject.com/paths/foundations/courses/foundations" target="_blank">Odin
                     Project</a></li>
             <li><a href="https://roadmap.sh/" target="_blank">roadmap.sh</a></li>
+            <li><a href="https://tinypng.com/" target="_blank">tinyping (image compressor/converter)</a></li>
         </ul>
         <li class="" onclick="parentLinkClicked(this)" data-initial-click="1" data-type="javascript">
             JavaScript <img src="/222dof/vectors/right-arrow.svg" class="arrow"></li>
