added more web dev links

--- a/notes/index.html
+++ b/notes/index.html
@@ -84,12 +84,17 @@
             Development <img src="/222dof/vectors/right-arrow.svg" class="arrow">
         </li>
         <ul id="web-development-sublinks" class="sublinks ">
+            <li><a href="https://www.cloudflare.com/learning/" target="_blank">Cloudflare learning center! (really good articles)</a></li>
             <li><a href="https://web.dev" target="_blank">Web.dev</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started" target="_blank">MDN Course</a></li>
             <li><a href="https://www.theodinproject.com/paths/foundations/courses/foundations" target="_blank">Odin
                     Project</a></li>
             <li><a href="https://roadmap.sh/" target="_blank">roadmap.sh</a></li>
             <li><a href="https://tinypng.com/" target="_blank">tinyping (image compressor/converter)</a></li>
+            <li><a href="https://pagespeed.web.dev/" target="_blank">To IMPORTANT info about your sites speed, layout, accessiblity, etc.</a></li>
+            <li><a href="https://developer.chrome.com/docs/lighthouse/performance/performance-scoring" target="_blank">Great resource for learning about website optimization</a></li>
+            <li><a href="https://developers.google.com/speed" target="_blank">Google Resource for making the web faster</a></li>
+            <li><a href="https://developers.google.com/speed/webp/docs/using" target="_blank">Use Google WebP encoding software on your computer</a></li>
         </ul>
         <li class="" onclick="parentLinkClicked(this)" data-initial-click="1" data-type="javascript">
             JavaScript <img src="/222dof/vectors/right-arrow.svg" class="arrow"></li>
